# legbot_lab

./: .gitignore  README.md  注意  键盘.md
example/cpp/: stand_go2.cpp
example/python/: stand_go2.py
example/ros2/src/: stand_go2.cpp
simulate/: CMakeLists.txt  config.yaml
simulate/src/: main.cc  param.h  physics_joystick.h  vbot_bridge.h
terrain_tool/: scene.xml  terrain_generator.py
vbot/xmls/: 0120_C_section01.xml  0120_C_section02.xml  0122_C_section03.xml  0126_CP_section01.xml  0126_C_section01.xml  0126_C_section02 copy.xml  0126_C_section02.xml  0126_C_section03.xml  0131_C_section01.xml  export_mujoco.py  mjmodel.xml  rollball.xml  scene.xml  vbot.xml  world.xml  world2.xml
vbot_rl_lab/: README.md
vbot_rl_lab/deploy/: sim2real测试说明.md
vbot_rl_lab/deploy/include/: param.h  unitree_articulation.h
vbot_rl_lab/deploy/include/FSM/: FSMState.h  State_FixStand.h  State_Passive.h  State_RLBase.h
vbot_rl_lab/deploy/include/isaaclab/algorithms/: algorithms.h
vbot_rl_lab/deploy/include/isaaclab/envs/: manager_based_rl_env.h
vbot_rl_lab/deploy/robots/go2/config/: config.yaml
vbot_rl_lab/deploy/robots/vbot/: CMakeLists.txt  main.cpp
vbot_rl_lab/deploy/robots/vbot/config/: config.yaml
vbot_rl_lab/deploy/robots/vbot/include/: Types.h  robstride_motor.h  unitree_articulation.h
vbot_rl_lab/deploy/robots/vbot/tests/: CMakeLists.txt  test_imu_protocol.cpp  test_motor_protocol.cpp  test_utils.h
vbot_rl_lab/scripts/: build_and_run_tests.sh  test_imu.py  test_motor.py
vbot_rl_lab/scripts/rsl_rl/: play_moe_cts.py  train_moe_cts.py
vbot_rl_lab/tests/: test_moe_cts.py
vbot_rl_lab/unitree_ros/robots/vbot_description/: vbot_training.xml
(+21 files in other folders)
